<resources>
    <string name="app_name">校园兼职</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text">填写资料验证信息，可更快上岗并确保工资到账</string>
    <string name="endtime">报名截止</string>
    <string name="极速报名">极速报名</string>
    <string name="姓名">姓名</string>
    <string name="请输入真实姓名">请输入真实姓名</string>
    <string name="性别">性别</string>
    <string name="完成并报名">完成并报名</string>
    <string name="text1">你的特长：</string>
    <string name="text2">你有过什么工作经验：</string>
    <string name="text3">请完成下面的发布表格</string>
    <string name="请输入手机号码">请输入手机号码</string>
    <string name="手机号码">手机号码</string>
    <string name="女">    女    </string>
    <string name="男">    男    </string>
    <string name="男女不限">男女不限</string>
    <string name="身份">身份</string>
    <string name="请输入年龄">请输入年龄</string>
    <string name="出生年月">出生年月</string>
    <string name="学生">学生</string>
    <string name="非学生">非学生</string>
    <string name="系统通知">系统通知</string>
    <string name="联系方式">联系方式：</string>
    <string name="workspace">工作地点</string>
    <string name="worktime">工作时间</string>
    <string name="性别要求">性别要求</string>
    <string name="工薪">工薪</string>
    <string name="日结">日结</string>
    <string name="月结">月结</string>
    <string name="peoplenumber">人数要求</string>
    <string name="工作描述">工作描述：</string>
    <string name="完成并发布">完成并发布</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="关于我们">关于我们</string>
    <string name="青龙团队">青龙团队</string>
    <string name="pwd_not_the_same">两次输入密码不同</string>
    <string name="name_already_exist">用户已存在</string>
    <string name="register_fail">注册失败</string>
    <string name="resetpwd_fail">修改失败</string>
    <string name="register_success">注册成功</string>
    <string name="account_empty">用户为空</string>
    <string name="pwd_empty">密码为空</string>
    <string name="pwd_check_empty">确认密码为空</string>
    <string name="resetpwd_success">修改成功</string>
    <string name="pwd_not_fit_user">密码不正确</string>
    <string name="name_not_exist">用户名不存在</string>
    <string name="pwd_new_empty">新密码为空</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="cancel_success">注销成功</string>
    <string name="cancel_fail">注销失败</string>





    <string-array name="spinner1">
        <item>小学教学1</item>
        <item>小学教学2</item>
        <item>小学教学3</item>
    </string-array>
    <string-array name="spinner2">
        <item>初中教学1</item>
        <item>初中教学2</item>
        <item>初中教学3</item>
        <item>初中教学4</item>
        <item>初中教学5</item>
    </string-array>
    <string-array name="spinner3">
        <item>高中教学1</item>
        <item>高中教学2</item>
        <item>高中教学3</item>
        <item>高中教学4</item>
    </string-array>
    <string name="title_activity_capture">ActivityCapture</string>

</resources>
