<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@drawable/green"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/极速报名"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:gravity="center"
        android:textSize="15sp" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/id_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/姓名"
            android:padding="10dp"
            android:textSize="20sp"/>
        <EditText
            android:layout_toEndOf="@+id/id_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/请输入真实姓名"
            android:textSize="15sp"
            android:layout_alignParentTop="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/background">
        <TextView
            android:text="@string/性别"
            android:padding="10dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_sex"
            android:textSize="20sp"/>

        <RadioButton
            android:text="@string/男"
            android:layout_toEndOf="@+id/id_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radio1" />

        <RadioButton
            android:text="@string/女"
            android:layout_toEndOf="@+id/id_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radio2" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/id_year"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/出生年月"
            android:textSize="20sp"/>
        <EditText
            android:layout_toEndOf="@+id/id_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/请输入出生年月"
            android:textSize="15sp"
            android:layout_alignParentTop="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/background">
        <TextView
            android:text="@string/身份"
            android:padding="10dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_card"
            android:textSize="20sp"/>

        <RadioButton
            android:text="@string/男"
            android:layout_toEndOf="@+id/id_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radio3" />

        <RadioButton
            android:text="@string/女"
            android:layout_toEndOf="@+id/id_radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radio4" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/id_number"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/手机号码"
            android:textSize="20sp"/>
        <EditText
            android:layout_toEndOf="@+id/id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/请输入11位手机号码"
            android:textSize="15sp"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textSize="20sp"
            android:padding="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=""/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textSize="20sp"
            android:padding="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=""/>
    </RelativeLayout>

    <Button
        android:text="@string/完成并报名"
        android:textColor="#FFFFFF"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/id_btn"
        android:background="@drawable/green"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />


</LinearLayout>

