<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_alignParentTop="true"
        style="@style/TopbarStyle" >
        <ImageView
            android:id="@+id/back"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/back"/>
        <TextView
            android:id="@+id/name"
            android:text="发布兼职"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <TextView
        android:paddingTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:gravity="center"
        android:textSize="15sp" />
    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#ccc"/>
    <RelativeLayout
        android:paddingTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp">
    <TextView
        android:id="@+id/id_time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/worktime"
        android:padding="10dp"
        android:textSize="20sp"/>
    <EditText
        android:layout_toEndOf="@+id/id_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="请输入工作时间"
        android:backgroundTint="@null"
        android:background="@null"
        android:textSize="15sp"
        android:layout_centerInParent="true"/>
    </RelativeLayout>
    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#ccc"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/id_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/workspace"
            android:padding="10dp"
            android:textSize="20sp"/>
        <EditText
            android:layout_toEndOf="@+id/id_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="请输入工作地点"
            android:backgroundTint="@null"
            android:background="@null"
            android:textSize="15sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/性别要求"
            android:padding="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_sex"
            android:textSize="20sp"
            android:gravity="center_vertical"/>

        <RadioButton
            android:text="@string/男"
            android:layout_toEndOf="@+id/id_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radio1"
            android:focusable="false"
            android:layout_centerInParent="true"/>

        <RadioButton
            android:text="@string/女"
            android:layout_toEndOf="@+id/id_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radio2"
            android:focusable="false"
            android:layout_centerInParent="true"/>

        <RadioButton
            android:text="@string/男女不限"
            android:layout_toEndOf="@+id/id_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radio"
            android:focusable="false"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/id_money"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/工薪"
            android:textSize="20sp"/>
        <RadioButton
            android:text="@string/日结"
            android:layout_toEndOf="@+id/id_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radiostudent"
            android:focusable="false"
            android:layout_centerInParent="true"/>

        <RadioButton
            android:text="@string/月结"
            android:layout_toEndOf="@+id/id_radiostudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radioworker"
            android:focusable="false"
            android:layout_centerInParent="true"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/id_radioworker"
            android:hint="金额"
            android:id="@+id/moner"
            android:background="@null"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="元"
            android:layout_toEndOf="@+id/moner"
            android:gravity="center_vertical"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView
            android:text="@string/身份"
            android:padding="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_card"
            android:textSize="20sp"/>

        <RadioButton
            android:text="@string/学生"
            android:layout_toEndOf="@+id/id_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radio3"
            android:focusable="false"
            android:layout_centerInParent="true"/>

        <RadioButton
            android:text="@string/非学生"
            android:layout_toEndOf="@+id/id_radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_radio4"
            android:focusable="false"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/id_number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/联系方式"
            android:textSize="20sp"/>
        <EditText
            android:layout_toEndOf="@+id/id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/请输入手机号码"
            android:textSize="15sp"
            android:backgroundTint="@null"
            android:background="@null"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <View
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/工作描述"
            android:textSize="20sp"
            android:padding="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@null"
            android:background="@null"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>
        android:background="#ccc"/>

    <Button
        android:text="@string/完成并发布"
        android:textColor="#FFFFFF"

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/id_btn"
        android:background="@drawable/green"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

</LinearLayout>

