<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_alignParentTop="true"
        style="@style/TopbarStyle" >
        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/back"
            android:id="@+id/back"/>
        <TextView
            android:text="我的简历"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:gravity="center"
                android:textSize="12sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#ccc"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="46dp">
                <TextView
                    android:id="@+id/id_name"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="姓名"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textSize="17sp"/>

                <EditText
                    android:id="@+id/truename"
                    android:layout_width="wrap_content"
                    android:textCursorDrawable="@null"
                    android:layout_height="wrap_content"
                    android:text="李霁堃"
                    android:hint="请输入姓名"
                    android:layout_marginLeft="6dp"
                    android:textColorHint="#999"
                    android:background="@null"
                    android:textSize="17sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc"/>
            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="46dp">

                <TextView
                    android:id="@+id/id_sex"
                    android:text="@string/性别"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:textSize="17sp"/>
                <RadioGroup
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:text="@string/男"
                        android:textColor="#000000"
                        android:textSize="17dp"
                        android:textCursorDrawable="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_radio1"
                        android:focusable="false"/>

                    <RadioButton
                        android:checked="true"
                        android:text="@string/女"
                        android:textColor="#000000"
                        android:textSize="17dp"
                        android:textCursorDrawable="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_radio2"
                        android:focusable="false"
                        android:layout_marginLeft="25dp" />
                </RadioGroup>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc"/>
            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="46dp">
                <TextView
                    android:id="@+id/id_year"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="年龄"
                    android:textColor="#000000"
                    android:textSize="17sp"/>
                <EditText
                    android:id="@+id/year"
                    android:layout_toEndOf="@+id/id_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:hint="@string/请输入年龄"
                    android:layout_marginLeft="6dp"
                    android:textColorHint="#999"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:textSize="17sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="46dp">
                <TextView
                    android:text="身份"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:id="@+id/id_card"
                    android:textSize="17dp"/>
                <RadioGroup
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:checked="true"
                        android:text="学生"
                        android:textColor="#000000"
                        android:textSize="17dp"
                        android:textCursorDrawable="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_radio3"
                        android:focusable="false"/>
                    <RadioButton
                        android:text="@string/非学生"
                        android:textColor="#000000"
                        android:textSize="17dp"
                        android:textCursorDrawable="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_radio4"
                        android:focusable="false"
                        android:layout_marginLeft="10dp" />
                </RadioGroup>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc"/>
            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="46dp">
                <TextView
                    android:id="@+id/id_number"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="手机"
                    android:textColor="#000000"
                    android:textSize="17dp"/>
                <EditText
                    android:id="@+id/mymoblenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="10086"
                    android:hint="@string/请输入手机号码"
                    android:background="@null"
                    android:textColorHint="#999"
                    android:textCursorDrawable="@null"
                    android:textColor="#808080"
                    android:textSize="17sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="你的特长"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:layout_marginTop="8dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:hint=""
                    android:text="没有特长，你咬我啊"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/bg_edittext2"
                    android:maxLength="150"
                    android:layout_marginRight="16dp"
                    android:textSize="17dp"
                    android:padding="7dp"
                    android:gravity="top"
                    android:textColorHint="#999999"
                    android:layout_marginTop="1dp"
                    android:textCursorDrawable="@null"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="你有什么工作经验"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:hint=""
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/bg_edittext2"
                    android:maxLength="150"
                    android:layout_marginRight="16dp"
                    android:textSize="17dp"
                    android:padding="7dp"
                    android:gravity="top"
                    android:textColorHint="#999999"
                    android:layout_marginTop="1dp"
                    android:textCursorDrawable="@null"/>
            </LinearLayout>

            <Button
                android:id="@+id/id_btn"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#8bbb54"
                android:textColor="#ffffff"
                android:text="确认信息"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>